# my_utils

linuxscript/: .viminfo  .vimrc  ackrc  command.txt  cs.sh  ignore  tmux_conf
linuxscript/.vim/: .netrwhist
linuxscript/cmake/: CMakeLists.txt
linuxscript/cmake/ut/: CMakeLists.txt
linuxscript/linux/: .bashrc  bashrc  gitconfig
linuxscript/mac/: .bash_profile
linuxscript/vim/: .viminfo  .vimrc
linuxscript/vim/.vim/: .netrwhist
